Категории мер-ий сделать выпадающим списком на гл странице с галочками Выводить сообщение, что событий по заданным фильтрам не найдено

--- a/src/BeeFee/UI/BeeFee.WebApplication/Views/Home/_EventGrid.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Views/Home/_EventGrid.cshtml
@@ -8,5 +8,5 @@
 }
 else
 {
-	<div>Событий не найдено</div>
+    <div class="col-xs-12 col-md-12 not--found--events--message">РЎРѕР±С‹С‚РёР№ РЅРµ РЅР°Р№РґРµРЅРѕ</div>
 }
