--- a/src/BeeFee/UI/BeeFee.WebApplication/Views/Home/_Filter.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Views/Home/_Filter.cshtml
@@ -2,7 +2,7 @@
 
 <div class="filter" data-fixed-wrap="filter">
     <div class="container">
-        <a class="filter--head" href="#" data-toggle="filter">Все события @(!String.IsNullOrWhiteSpace(Model.City) ? "в городе " +Model.City : null) в ближайшее время</a>
+        <a class="filter--head" href="#" data-toggle="filter">Все события @(!String.IsNullOrWhiteSpace(Model.City) ? "в городе " + Model.City : null) в ближайшее время</a>
     </div>
     <div class="filter--body">
         <div class="container">
@@ -34,16 +34,16 @@
                                         @Html.HiddenFor(x => x.City, new { @class = "select_hidden" })
                                         @*<input class="select_hidden" id="selectCity1" type="hidden" value="@(Model.Cities.FirstOrDefault(x => x.Selected)?.Text)"/>*@
                                         <div class="select_in">
-											<div class="select_title">
-												@if (!String.IsNullOrWhiteSpace(Model.City))
-												{
-													@Model.City
-												}
-												else
-												{
-													<span class="select_placeholder">Выберите город</span>
-												}
-											</div>
+                                            <div class="select_title">
+                                                @if (!String.IsNullOrWhiteSpace(Model.City))
+                                                {
+                                                    @Model.City
+                                                }
+                                                else
+                                                {
+                                                    <span class="select_placeholder">Выберите город</span>
+                                                }
+                                            </div>
                                         </div>
                                         <ul class="select_list">
                                             @{
@@ -71,7 +71,8 @@
                                 <div class="col-xs-4 col-md-3">
                                     <label class="vertical-field--l"><span>Выберите даты</span></label>
                                 </div>
-                                <div class="col-xs-1 col-md-1" style="width: 16px;"><label class="vertical-field--l"><span>c</span></label>
+                                <div class="col-xs-1 col-md-1" style="width: 16px;">
+                                    <label class="vertical-field--l"><span>c</span></label>
                                 </div>
                                 <div class="col-xs-3 col-md-3">
                                     <div class="vertical-field--d">
@@ -79,7 +80,8 @@
                                         <input name="@Html.NameFor(x=>x.StartDate)" class="vertical-field--i js-date" type="text" id="startDate1" value="@Model.StartDate.Date.ToString("dd.MM.yyyy")" />
                                     </div>
                                 </div>
-                                <div class="col-xs-1 col-md-1" style="width: 35px;"><label class="vertical-field--l"><span>по</span></label>
+                                <div class="col-xs-1 col-md-1" style="width: 35px;">
+                                    <label class="vertical-field--l"><span>по</span></label>
                                 </div>
                                 <div class="col-xs-3 col-md-3">
                                     <div class="vertical-field--d">
@@ -99,33 +101,31 @@
                                 <div class="col-xs-4 col-md-3">
                                     <label class="vertical-field--l"><span>Выберите категорию</span></label>
                                 </div>
-                                <div class="col-xs-4 col-md-9">
-                                    <div class="vertical-field--c">
-                                        <div class="row">
-                                            @{
-                                                var allChecked = true;
-                                                foreach (var category in Model.Categories)
-                                                {
-                                                    if (!category.Selected)
-                                                    {
-                                                        allChecked = false;
-                                                    }
-                                                    <div class="col-xs-2 col-md-3">
-                                                        <label class="checkbox">
-                                                            <input value="@category.Value" name="Categories" class="checkbox--input category-checkbox" type="checkbox" @(category.Selected ? "checked=\"checked\"" : "") />
-                                                            <div class="checkbox--label">@category.Text</div>
-                                                        </label>
-                                                    </div>
-                                                }
-
-                                                <div class="col-xs-2 col-md-3">
+                                <div class="col-xs-4 col-md-6">
+                                    <div class="select">
+                                        <a href="#" class="select_in_checkbox">
+                                            <div class="select_title">
+                                                <span class="select_placeholder">Нажмите для выбора</span>
+                                                <div></div>
+                                            </div>
+                                        </a>
+                                        <ul class="select_list_checkbox">
+                                            <li>
+                                                <label class="checkbox">
+                                                    <input type="checkbox" class="checkbox--input category-checkbox" @(Model.Categories.All(c => c.Selected) ? "checked=\"checked\"" : "") data-checkboxes="total" />
+                                                    <div class="checkbox--label">Все категории</div>
+                                                </label>
+                                            </li>
+                                            @foreach (var category in Model.Categories)
+                                            {
+                                                <li>
                                                     <label class="checkbox">
-                                                        <input class="checkbox--input" type="checkbox" @(allChecked ? "checked=\"checked\"" : "") data-checkboxes="total" />
-                                                        <div class="checkbox--label">Все категории</div>
+                                                        <input type="checkbox" class="checkbox--input category-checkbox" value="@category.Value" name="Categories" @(category.Selected ? "checked=\"checked\"" : "") />
+                                                        <div class="checkbox--label">@category.Text</div>
                                                     </label>
-                                                </div>
+                                                </li>
                                             }
-                                        </div>
+                                        </ul>
                                     </div>
                                 </div>
                                 <div class="col-xs-4 col-xs-offset-l-0 col-md-9 col-md-offset-l-3">
@@ -135,20 +135,20 @@
                         </div>
                     </div>
                     @*<div class="filter--field">
-                        <div class="vertical-field">
-                            <div class="row">
-                                <div class="col-xs-4 col-md-3">
-                                    <label class="vertical-field--l"><span>Максимальная цена билета</span></label>
-                                </div>
-                                <div class="col-xs-4 col-md-6">
-                                    @Html.TextBoxFor(x => x.MaxPrice, new { @class = "vertical-field--i", id = "maxPrice1" })
-                                </div>
-                                <div class="col-xs-4 col-xs-offset-l-0 col-md-9 col-md-offset-l-3">
-                                    <div class="vertical-field--t"></div>
+                            <div class="vertical-field">
+                                <div class="row">
+                                    <div class="col-xs-4 col-md-3">
+                                        <label class="vertical-field--l"><span>Максимальная цена билета</span></label>
+                                    </div>
+                                    <div class="col-xs-4 col-md-6">
+                                        @Html.TextBoxFor(x => x.MaxPrice, new { @class = "vertical-field--i", id = "maxPrice1" })
+                                    </div>
+                                    <div class="col-xs-4 col-xs-offset-l-0 col-md-9 col-md-offset-l-3">
+                                        <div class="vertical-field--t"></div>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </div>*@
+                        </div>*@
                     <div class="row">
                         <div class="col-xs-4 col-md-6 col-md-offset-l-3">
                             <button class="btn is-block" type="submit">Найти мероприятия</button>
