--- a/src/BeeFee/UI/BeeFee.WebApplication/wwwroot/css/site.css
+++ b/src/BeeFee/UI/BeeFee.WebApplication/wwwroot/css/site.css
@@ -687,6 +687,12 @@
     margin: 0 0 10px;
 }
 
+.not--found--events--message {
+    padding: 20px;
+    text-align: center;
+    font-size: 20px;
+}
+
 .modals {
     z-index: 1000;
     display: none;
@@ -1092,157 +1098,6 @@
     color: #ff402b;
 }
 
-.select {
-    z-index: 10;
-    position: relative;
-    top: auto;
-    right: auto;
-    bottom: auto;
-    left: auto;
-}
-
-.select_in {
-    cursor: pointer;
-    background: #FBFBFB;
-    border: 1px solid #F2F2F2;
-    padding: 18px 60px 16px 23px;
-    -webkit-transition: 200ms all ease;
-    -o-transition: 200ms all ease;
-    transition: 200ms all ease;
-    position: relative;
-    top: auto;
-    right: auto;
-    bottom: auto;
-    left: auto;
-    font-size: 18px;
-    line-height: 28px;
-}
-
-    .select_in:before {
-        -webkit-transition: 200ms all ease;
-        -o-transition: 200ms all ease;
-        transition: 200ms all ease;
-        color: #999999;
-        content: '\e905';
-        font-family: 'icomoon' !important;
-        speak: none;
-        font-style: normal;
-        font-weight: normal;
-        font-variant: normal;
-        text-transform: none;
-        line-height: 1;
-        -webkit-font-smoothing: antialiased;
-        -moz-osx-font-smoothing: grayscale;
-        font-size: 9px;
-        line-height: 62px;
-        position: absolute;
-        top: 0;
-        right: 23px;
-        bottom: auto;
-        left: auto;
-    }
-
-.select_title {
-    white-space: nowrap;
-    -o-text-overflow: ellipsis;
-    text-overflow: ellipsis;
-    overflow: hidden;
-}
-
-.select_placeholder {
-    color: #999999;
-    white-space: nowrap;
-    -o-text-overflow: ellipsis;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    display: block;
-}
-
-.select:hover .select_in,
-.select.is-opened .select_in {
-    border-color: #999999;
-}
-
-    .select.is-opened .select_in:before {
-        -webkit-transform: rotate(180deg);
-        -moz-transform: rotate(180deg);
-        -ms-transform: rotate(180deg);
-        -o-transform: rotate(180deg);
-        transform: rotate(180deg);
-    }
-
-.select_list {
-    list-style: none;
-    padding: 9px 0;
-    margin: 5px 0 0;
-    overflow-y: auto;
-    background: #ffffff;
-    border: 1px solid #999999;
-    -webkit-box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.17);
-    box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.17);
-    -webkit-border-radius: 4px;
-    border-radius: 4px;
-    display: none;
-    position: absolute;
-    top: 100%;
-    right: auto;
-    bottom: auto;
-    left: auto;
-    width: 100%;
-    height: auto;
-    max-width: initial;
-    max-height: 200px;
-}
-
-    .select_list li {
-        padding: 14px 23px;
-        cursor: pointer;
-        font-size: 18px;
-        line-height: 28px;
-    }
-
-        .select_list li:hover {
-            background: #F5F5F5;
-        }
-
-        .select_list li.is-active {
-            font-weight: 500;
-        }
-
-.select.is-simple .select_in {
-    background: none;
-    padding: 3px 0 7px;
-    border: none;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.12);
-    font-size: 16px;
-    line-height: 20px;
-}
-
-    .select.is-simple .select_in:before {
-        font-size: 7px;
-        line-height: 30px;
-        position: absolute;
-        top: 0;
-        right: 6px;
-        bottom: auto;
-        left: auto;
-    }
-
-.select.is-simple .select_list {
-    padding: 5px 0;
-    border: 1px solid rgba(0, 0, 0, 0.12);
-    -webkit-box-shadow: none;
-    box-shadow: none;
-    -webkit-border-radius: 0;
-    border-radius: 0;
-}
-
-    .select.is-simple .select_list li {
-        padding: 7px 15px;
-        font-size: 16px;
-        line-height: 20px;
-    }
-
 .checkbox {
     margin: 0;
     display: block;
@@ -1508,5 +1363,3 @@ input:checked + .checkbox--label:after {
         height: -webkit-calc(100vh - 32px - 56px - 32px);
         height: calc(100vh - 32px - 56px - 32px);
     }
-
-
