--- a/src/BeeFee/UI/WebApplication3/Areas/Org/Views/Companies/Create.cshtml
+++ b/src/BeeFee/UI/WebApplication3/Areas/Org/Views/Companies/Create.cshtml
@@ -3,7 +3,7 @@
 	ViewBag.Title = "Добавить организатора";
 }
 <div class="profile">
-	<form asp-action="Add" asp-controller="Company" method="post" enctype="multipart/form-data">
+	<form asp-action="Create" asp-controller="Companies" method="post" enctype="multipart/form-data">
 		<div class="validation" asp-validation-summary="ModelOnly"></div>
 
 		<div class="create--field is-big">
