--- a/src/BeeFee/UI/WebApplication3/Views/Shared/_TopMenuCabinet.cshtml
+++ b/src/BeeFee/UI/WebApplication3/Views/Shared/_TopMenuCabinet.cshtml
@@ -3,23 +3,23 @@
 	<a class="header--logo" href="/">@*<img src="#" alt="" />*@</a>
 	<nav class="header--nav hidden-xs">
 		<ul class="header--list">
-			<li class="header--item"><a asp-area="" asp-controller="Account" asp-action="Profile">Профиль</a></li>
+			<li class="header--item"><a asp-area="" asp-controller="Profile" asp-action="Edit">Профиль</a></li>
 			@if (User.IsInRole(RoleNames.Admin))
 			{
 				<li class="header--item"><a asp-area="Admin" asp-controller="Category" asp-action="Index">Категории</a></li>
 			}
 			@if (User.IsInRole(RoleNames.MultiOrganizer))
 			{
-				<li class="header--item"><a asp-area="Org" asp-controller="Company" asp-action="Index">Мои компании</a></li>
+				<li class="header--item"><a asp-area="Org" asp-controller="Companies" asp-action="Index">Мои компании</a></li>
 			}
 			else if (User.IsInRole(RoleNames.Organizer))
 			{
 				<li class="header--item"><a asp-area="Org" asp-controller="Event" asp-action="Index">Мои события</a></li>
-				<li class="header--item"><a asp-area="Org" asp-controller="Company" asp-action="Edit">Профиль орг-ра</a></li>
+				<li class="header--item"><a asp-area="Org" asp-controller="Companies" asp-action="First">Профиль орг-ра</a></li>
 			}
 			@if (User.IsInRole(RoleNames.EventModerator))
 			{
-				<li class="header--item"><a asp-area="Moderator" asp-controller="Event" asp-action="Index">Модерация</a></li>
+				<li class="header--item"><a asp-area="Moderator" asp-controller="Events" asp-action="Index">Модерация</a></li>
 			}
 		</ul>
 	</nav>
